fixed heading p align

--- a/scss/_queries.scss
+++ b/scss/_queries.scss
@@ -173,6 +173,9 @@
 	header.header .header-container {
 		margin: 3rem 0.5rem;
 		padding: 1rem 0.5rem 5rem 0.5rem;
+		& .header-head {
+			text-align: center;
+		}
 		& .header-card-list {
 			margin: 0;
 			padding: 1rem;
